# Speech

./: .gitignore  .pre-commit-config.yaml  =2.1.0  CHANGELOG.md  CHANGES_DETAIL.md  CHECKPOINT_FLOW.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  end-detection.ipynb  nemo_asr_architecture_guide.py  pyproject.toml  setup.py  test_checkpoint_fix.py  test_checkpoint_marker_logic.py
.claude/: settings.json
.devcontainer/: devDockerfile  devcontainer.json
examples/tts/easymagpie_vllm_omni/: Dockerfile  README.md  benchmark_easymagpie_tts.py  benchmark_model.py  benchmark_service.py  benchmark_streaming_service.py  easy_magpietts_convert_to_vllm.py  easy_magpietts_extract_speaker_encoding.py  easy_magpietts_single_infer.py  easymagpie_inference_demo.ipynb  export_codec_decoder_onnx.py  export_codec_decoder_trt.py  pyproject.toml  run_service_request.ipynb
examples/tts/easymagpie_vllm_omni/easymagpie_vllm_omni/: __init__.py  backbone_patches.py  config.py  easymagpie.py  local_transformer.py  scheduler.py
examples/tts/easymagpie_vllm_omni/model_repository/codec/: config.pbtxt
examples/tts/easymagpie_vllm_omni/model_repository/easymp/: config.pbtxt
examples/tts/easymagpie_vllm_omni/model_repository/easymp/1/: model.py
examples/tts/easymagpie_vllm_omni/scripts/: benchmark_model.py  benchmark_service.py  benchmark_streaming_service.py  easy_magpietts_convert_to_vllm.py  export_codec_decoder_onnx.py  export_codec_decoder_trt.py  streaming_codec_decode_demo.ipynb
examples/tts/easymagpie_vllm_omni/tests/: conftest.py  test_config.py  test_local_transformer.py
examples/tts/easymagpie_vllm_omni/vllm_plugin_easymagpie_omni/: __init__.py
examples/tts/easymagpie_vllm_sidecar/: README.md  pyproject.toml
examples/tts/easymagpie_vllm_sidecar/easymagpie_server/: server.py
examples/tts/easymagpie_vllm_sidecar/easymagpie_vllm/: backbone_patches.py  easymagpie_smallmamba.py  easymagpie_smallmamba_v2.py  streaming_head.py
examples/tts/easymagpie_vllm_sidecar/vllm_plugin_easymagpie/: __init__.py
examples/voice_agent/: CLAUDE.md  README.md  environment.yaml  environment_nano3.yaml  environment_spark.yaml  install.sh  install_spark.txt  pip_no_deps_spark.txt  pyproject.toml  requirements.txt
examples/voice_agent/client/: index.html  package-lock.json  package.json  vite.config.js
examples/voice_agent/client/src/: app.ts
examples/voice_agent/evaluation/: README.md  bot_server.py  bot_server_nemotron.py  bot_websocket_agent.py  bot_websocket_agent_nemotron.py  bot_websocket_user.py  bot_websocket_user_nemotron.py  dynamic_evaluation_runner.py  evaluation_bridge.py  rtvi_evaluation_bridge.py  run_agent.sh  run_agent_nemotron.sh  run_evaluation.py  run_evaluation.sh  run_user.sh  run_user_nemotron.sh
examples/voice_agent/evaluation/data/: README.md
examples/voice_agent/evaluation/nemotron_voice_agent_config/: prompt.yaml
examples/voice_agent/evaluation/server_configs/: agent.yaml  agent_nvidia.yaml  agent_nvidia_omni.yaml  agent_think.yaml  user.yaml  user_nvidia.yaml  user_nvidia_nano3.yaml  user_think.yaml
examples/voice_agent/server/: AGENT_BRIDGE_README.md  AGENT_BRIDGE_SUMMARY.md  QUICKSTART_AGENT_BRIDGE.md  advanced_bridge_example.py  bot_websocket.py  bot_websocket_server.py  bot_websocket_server_alt.py  connect_two_agents.py  run_agent_demo.py  run_agent_demo.sh  server.py  websocket_bridge.py
examples/voice_agent/server/parsers/: nano_v3_reasoning_parser.py  nemotron_toolcall_parser_streaming.py
examples/voice_agent/server/server_configs/: NVIDIA_NeMo_models.yaml  default.yaml  default_nvidia.yaml
examples/voice_agent/server/server_configs/llm_configs/: hf_llm_generic.yaml  llama3.1-8B-instruct.yaml  minimax.yaml  nemotron_nano_v2.yaml  nemotron_nano_v3.yaml  nemotron_nano_v3_omni.yaml  nemotron_nano_v3_omni_think.yaml  nemotron_nano_v3_think.yaml  qwen2.5-7B.yaml  qwen3-8B.yaml  qwen3-8B_think.yaml
examples/voice_agent/server/server_configs/stt_configs/: nemo_cache_aware_streaming.yaml
examples/voice_agent/server/server_configs/tts_configs/: easy_magpie.yaml  easy_magpie_smallmamba_vllm.yaml  kokoro_82M.yaml  nemo_fastpitch-hifigan.yaml
examples/voice_agent/tests/: run_reasoning_budget_offline.py  test_config_manager.py  test_eva_airline_stage_a.py  test_eva_airline_stage_b.py  test_minimax_llm.py  test_pull_summary_and_db_hash.py  test_reasoning_budget_logits_processor.py
(+1359 files in other folders)
